[gd_scene load_steps=8 format=2]

[ext_resource path="res://board/ui/scene_transition.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/logo.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/intro.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/main_loop.ogg" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Disolve"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("DissolveRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 0.945098, 0.909804, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("DissolveRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.945098, 0.909804, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DissolveRect/Logo:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DissolveRect/Logo:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "SplashLogo"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("DissolveRect/Logo:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DissolveRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.945098, 0.909804, 1 ), Color( 1, 0.945098, 0.909804, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DissolveRect/Logo:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1.7, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 0.945098, 0.909804, 1 ), Color( 1, 0.945098, 0.909804, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="SceneTransition" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="DissolveRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Logo" type="Sprite" parent="DissolveRect"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 180, 320 )
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Disolve = SubResource( 1 )
anims/RESET = SubResource( 2 )
anims/SplashLogo = SubResource( 3 )

[node name="MusicIntro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Music"

[node name="MusicLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Music"

[connection signal="finished" from="MusicIntro" to="." method="_on_MusicIntro_finished"]
